@@ -2,3 +2,6 @@
 An application that allows you to view your files and send them to other users. Server-client application
 
 VM Options
+--module-path 
+"C:\Program Files\Java\javafx-sdk-11.0.2\lib" 
+--add-modules javafx.controls,javafx.fxml
